Code review comments added by GG

--- a/combine/draft.ipynb
+++ b/combine/draft.ipynb
@@ -45,9 +45,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# CODE REVIEW NOTES\n",
+    "# NOTE check import statements aren't in functions\n",
+    "# will need to change this notebook into py script when finished drafting\n",
+    "# could add more comments in Paper class "
+   ]
   },
   {
    "cell_type": "code",
@@ -292,7 +299,7 @@
    "source": [
     "class PDBChecker:\n",
     "    def __init__(self):\n",
-    "        from Bio.PDB.PDBList import PDBList\n",
+    "        from Bio.PDB.PDBList import PDBList # NOTE take import statement out of function\n",
     "        \"\"\"\n",
     "        First we store all the existing pdb IDs as a dictionary for O(1) lookup. \n",
     "        There are 184,929 IDs as of 2021-12-8 and the retrieval using biopython takes about 7 seconds.\n",
@@ -336,7 +343,7 @@
     "        of the paper. \n",
     "        \"\"\"\n",
     "        \n",
-    "        import tempfile\n",
+    "        import tempfile  # NOTE take imports out of function\n",
     "        import re\n",
     "\n",
     "        temp_dir = tempfile.TemporaryDirectory()\n",
