protein2info tests added

--- a/genbank/test.ipynb
+++ b/genbank/test.ipynb
@@ -54,10 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = (1, 2)\n",
+    "a[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -240,68 +254,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "pdb_pairables = [{'chain': 'H',\n",
+    "                               'pdb_lc': 'abc',\n",
+    "                               'GBSeq_sequence': 'dcba'},\n",
+    "                              {'chain': 'L',\n",
+    "                               'pdb_hc': 'cba',\n",
+    "                               'GBSeq_sequence': 'abcd'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "light_chains = []\n",
+    "heavy_chains = []\n",
     "\n",
+    "for pdb_pairable in pdb_pairables:\n",
+    "    if pdb_pairable['chain'] == 'H':\n",
+    "        heavy_chains.append(pdb_pairable)\n",
+    "    elif pdb_pairable['chain'] == 'L':\n",
+    "        light_chains.append(pdb_pairable)\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "[{'chain': 'H', 'pdb_lc': 'abc', 'GBSeq_sequence': 'dcba'}]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "heavy_chains"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "paired_entries = []\n",
+    "unpaired_hcs = []\n",
     "\n",
+    "for hc in heavy_chains:\n",
+    "    paired = False\n",
+    "    target_lc = hc['pdb_lc']\n",
+    "\n",
+    "    for lc in light_chains:\n",
+    "        target_hc = lc['pdb_hc']\n",
+    "\n",
+    "        if (target_lc in lc['GBSeq_sequence'].upper() and\n",
+    "                target_hc in hc['GBSeq_sequence'].upper()):\n",
+    "\n",
+    "            paired_entries.append({'heavy_chain': hc,\n",
+    "                                    'light_chain': lc})\n",
+    "\n",
+    "            paired = True\n",
+    "            light_chains.remove(lc)\n",
+    "            break\n",
+    "\n",
+    "    if not paired:\n",
+    "        unpaired_hcs.append(hc)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "[]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(paired_list)"
+    "paired_entries"
    ]
   },
   {
