--- a/run_genbank_pipeline.ipynb
+++ b/run_genbank_pipeline.ipynb
@@ -17,8 +17,12 @@
    "source": [
     "import time\n",
     "import json\n",
+    "import http.client\n",
+    "http.client.HTTPConnection._http_vsn = 10\n",
+    "http.client.HTTPConnection._http_vsn_str = 'HTTP/1.0'\n",
     "\n",
     "from genbank.keywords2ids import GenbankSearch\n",
+    "from genbank.json_combination import Combination\n",
     "from genbank.ids2protein import ProteinRetrieval\n",
     "from genbank.proteins2info import InfoRetrieval\n",
     "from genbank.info2csv import PopulateDatabase\n",
@@ -35,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define keywords for genbank search\n",
-    "keywords = '((Immunoglobulin[All Fields] OR antibody[All Fields] ' +\\\n",
+    "keywords1 = '((Immunoglobulin[All Fields] OR antibody[All Fields] ' +\\\n",
     "               'OR antibodies[All Fields] OR nanobody[All Fields] ' +\\\n",
     "               'OR nanobodies[All Fields]) AND (COVID-19[All Fields] ' +\\\n",
     "               'OR coronavirus[All Fields] OR Sars-Cov[All Fields] ' +\\\n",
@@ -53,16 +57,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saved in files with ...2.json\n",
+    "keywords2 = '((Immunoglobulin[All Fields] OR antibody[All Fields] ' +\\\n",
+    "               'OR antibodies[All Fields] OR nanobody[All Fields] ' +\\\n",
+    "               'OR nanobodies[All Fields] OR MAb[All Fields]) AND (COVID-19[All Fields] ' +\\\n",
+    "               'OR coronavirus[All Fields] OR Sars-Cov[All Fields] ' +\\\n",
+    "               'OR Mers-Cov[All Fields] OR SARS[All Fields] ' +\\\n",
+    "               'OR Sars-CoV-2[All Fields]) AND (neutralizing[All Fields] ' +\\\n",
+    "               'OR neutralize[All Fields] OR neutralization[All Fields] ' +\\\n",
+    "               'OR bind[All Fields] OR inhibit[All Fields] or targeting[All Fields] or binding[All Fields]) ' +\\\n",
+    "               'AND (heavy chain[All Fields] or complementary determining region[All Fields] or gene[All Fields] ' +\\\n",
+    "               'or epitope[All Fields] or receptor-binding domain[All Fields] or rbd[All Fields] or spike protein[All Fields] ' +\\\n",
+    "               'or VHH[All Fields]))'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of entries found: 10049\n",
+      "number of entries found: 32339\n",
       "----------\n",
-      "number of IDs retrieved: 10049\n",
+      "number of IDs retrieved: 32339\n",
       "--- 2 seconds ---\n"
      ]
     }
@@ -71,33 +95,37 @@
     "# Search genbank with keywords and get ids of all entries\n",
     "start_time = time.time()\n",
     "\n",
-    "genbanksearch = GenbankSearch(keywords)\n",
-    "genbanksearch()\n",
+    "genbanksearch = GenbankSearch(keywords2)\n",
+    "genbanksearch(out_file_path='genbank/data/id_list.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of protein handles retrieved: 10049\n",
+      "Number of ids from keyword search: 32339\n",
+      "Number of ids from paper scraping: 1953\n",
       "----------\n",
-      "--- 348 seconds ---\n"
+      "Number of unique ids from paper scraping: 1953\n",
+      "Total ids after comination: 34292\n",
+      "--- 1 seconds ---\n"
      ]
     }
    ],
    "source": [
-    "# Download the protein handles of all found ids\n",
+    "#Combine ids from the genbank search with ids from paper scraping\n",
     "start_time = time.time()\n",
     "\n",
-    "proteinretrival = ProteinRetrieval()\n",
-    "proteinretrival()\n",
+    "idscombination = Combination(ids_file_path='genbank/data/id_list2.json',\n",
+    "                 id_papers_file_path='genbank/data/id_list_from_papers.json')\n",
+    "idscombination(ids_out_file_path='genbank/data/id_combined_list2.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
@@ -111,27 +139,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of entires removed by antibody filter: 3740\n",
-      "Number of entires after antibody filter: 6309\n",
+      "[===---------------------------------------------------------] 5.7%, 1851/32339\n",
+      " number of protein handles retrieved: 1851\n",
       "----------\n",
-      "Number of entries where antigen was determined: 6209\n",
-      "Number of entries where antigen was not determined: 100\n",
+      "--- 1688 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download the protein handles of all found ids\n",
+    "start_time = time.time()\n",
+    "\n",
+    "proteinretrival = ProteinRetrieval(ids_file_path='genbank/data/id_list2.json')\n",
+    "proteinretrival(out_file_path='genbank/data/protein_handles2.json')\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/fabian/miniconda3/envs/auto-db-pipeline/lib/python3.9/site-packages/Bio/Seq.py:2979: BiopythonWarning: Partial codon, len(sequence) not a multiple of three. Explicitly trim the sequence or add trailing N before translation. This may become an error in future.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of entires removed by antibody filter: 2130\n",
+      "Number of entires after antibody filter: 205\n",
       "----------\n",
-      "Number of entries where fragement name was determined: 1729\n",
-      "Number of entries where fragment name was not determined: 4580\n",
+      "Number of entries where antigen was determined: 178\n",
+      "Number of entries where antigen was not determined: 27\n",
       "----------\n",
-      "Number of nanobodies: 155\n",
-      "Number of antibodies: 6154\n",
+      "Number of entries where fragement name was determined: 197\n",
+      "Number of entries where fragment name was not determined: 8\n",
       "----------\n",
-      "Number of sequence pairs: 763\n",
-      "Number of sequences that could not be paired in attempt 1: 4628\n",
+      "Number of nanobodies: 3\n",
+      "Number of antibodies: 202\n",
       "----------\n",
-      "Number of entries attempted to pair with SAbDab: 164\n",
-      "Number of entries not pairable with SAbDab: 4464\n",
+      "Number of sequence pairs: 64\n",
+      "Number of sequences that could not be paired in attempt 1: 74\n",
       "----------\n",
-      "Number of pairs found with SAbDab: 82\n",
+      "Number of entries attempted to pair with SAbDab: 0\n",
+      "Number of entries not pairable with SAbDab: 74\n",
+      "----------\n",
+      "Number of pairs found with SAbDab: 0\n",
       "Number of sequences not paired but sequence from PDB added: 0\n",
-      "--- 514 seconds ---\n"
+      "--- 52 seconds ---\n"
      ]
     }
    ],
@@ -139,29 +201,31 @@
     "# Extract the relevant information from protein handles\n",
     "start_time = time.time()\n",
     "\n",
-    "inforetreival = InfoRetrieval()\n",
-    "inforetreival(classification_method='anarci')\n",
+    "inforetreival = InfoRetrieval(proteins_file_path='genbank/data/nucleotide_handles_from_papers.json')\n",
+    "inforetreival(db='protein', classification_method='anarci', paired_out_file_path='genbank/data/AB_paired_nucelotides_from_papers.json',\n",
+    "                 unpaired_out_file_path='genbank/data/AB_unpaired_nucleotides_from_papers.json',\n",
+    "                 nanobod_out_file_path='genbank/data/nanobody_nucleotides_from_papers.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of paired database entires: 1000\n",
+      "Number of paired database entires: 1067\n",
       "----------\n",
-      "Number of paired database entires after duplicate removal: 421\n",
-      "Number of duplicates removed: 579\n",
+      "Number of paired database entires after duplicate removal: 485\n",
+      "Number of duplicates removed: 582\n",
       "----------\n",
-      "Number of unpaired database entires: 4464\n",
+      "Number of unpaired database entires: 4555\n",
       "----------\n",
-      "--- 78 seconds ---\n"
+      "--- 94 seconds ---\n"
      ]
     }
    ],
@@ -169,15 +233,17 @@
     "# Populate a csv file with information\n",
     "start_time = time.time()\n",
     "\n",
-    "populatedb = PopulateDatabase()\n",
-    "populatedb()\n",
-    "\n",
+    "populatedb = PopulateDatabase(paired_path='genbank/data/AB_paired_combined_papers_prot_nt.json',\n",
+    "                 unpaired_path='genbank/data/AB_unpaired_combined_papers_prot_nt.json',\n",
+    "                 nanobod_path='genbank/data/nanobody_combined_papers_prot_nt.json')\n",
+    "populatedb(out_file_paired='genbank/data/ab_database_combined_papers_prot_nt.csv',\n",
+    "                 out_file_unpaired='genbank/data/ab_database_unpaired_combined_papers_prot_nt.csv')\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,30 +337,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total sequences assessed: 10027)\n",
+      "total sequences assessed: 32339)\n",
       "        number of genbank sequences not in covab dab:\n",
-      "        5316\n",
+      "        28622\n",
       "        number of genbank sequences found in covab dab:\n",
-      "        4711\n",
-      "        match rate: 0.46983145507130747\n",
+      "        3717\n",
+      "        match rate: 0.11493861900491667\n",
       "        number of genebank sequences that have multiple matches in covab dab:\n",
-      "        1081.0\n",
+      "        952.0\n",
       "        number of genebank entries with non unique match in covab dab:\n",
-      "        1633\n",
+      "        1148\n",
       "        -------------\n",
-      "        total sequences in covab dab: 5033\n",
-      "        number of Covab Dab VH sequences found: 1522\n",
-      "        number of Covab Dab VL sequences found: 1556\n",
-      "        number of Covab Dab VH VL pairings found: 1423\n",
+      "        total sequences in covab dab: 5210\n",
+      "        number of Covab Dab VH sequences found: 1641\n",
+      "        number of Covab Dab VL sequences found: 928\n",
+      "        number of Covab Dab VH VL pairings found: 856\n",
       "        number of Covab Dab entires where either VH or VL was found:\n",
-      "        1655\n",
+      "        1713\n",
       "        -------------\n",
       "        percentage of covab dab entries with pairing found:\n",
-      "        28.27339558911186\n",
+      "        16.429942418426105\n",
       "        percentage of covab dab entries with either VL or VH found:\n",
-      "        32.88297238227697\n",
+      "        32.87907869481766\n",
       "        \n",
-      "--- 52 seconds ---\n"
+      "--- 553 seconds ---\n"
      ]
     }
    ],
@@ -302,10 +368,10 @@
     "# Compare found genbank entries to Covabdab\n",
     "start_time = time.time()\n",
     "\n",
-    "with open('genbank/data/protein_handles', 'r') as infile:\n",
+    "with open('genbank/data/protein_handles2.json', 'r') as infile:\n",
     "    protein_entries = json.load(infile)\n",
     "\n",
-    "evaluation = EvaluateGenbankSearch('genbank/data/CoV-AbDab_010322.csv', protein_entries, keywords)\n",
+    "evaluation = EvaluateGenbankSearch('genbank/data/CoV-AbDab_090322.csv', protein_entries, keywords2)\n",
     "evaluation(outpath='genbank/data/protein_search_stats.csv', print_metrics=True, save_metrics=True)\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
