ids from papers updated

--- a/run_genbank_pipeline.ipynb
+++ b/run_genbank_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of entries found: 32339\n",
+      "number of entries found: 10086\n",
       "----------\n",
-      "number of IDs retrieved: 32339\n",
+      "number of IDs retrieved: 10086\n",
       "--- 2 seconds ---\n"
      ]
     }
@@ -95,7 +95,7 @@
     "# Search genbank with keywords and get ids of all entries\n",
     "start_time = time.time()\n",
     "\n",
-    "genbanksearch = GenbankSearch(keywords2)\n",
+    "genbanksearch = GenbankSearch(keywords1)\n",
     "genbanksearch(out_file_path='genbank/data/id_list.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
@@ -120,29 +120,28 @@
     }
    ],
    "source": [
-    "#Combine ids from the genbank search with ids from paper scraping\n",
+    "#Combine protein ids from the genbank search with protein ids from paper scraping\n",
     "start_time = time.time()\n",
     "\n",
-    "idscombination = Combination(ids_file_path='genbank/data/id_list2.json',\n",
-    "                 id_papers_file_path='genbank/data/id_list_from_papers.json')\n",
-    "idscombination(ids_out_file_path='genbank/data/id_combined_list2.json')\n",
+    "idscombination = Combination('genbank/data/id_list.json', 'genbank/data/id_list_protein_from_papers.json')\n",
+    "idscombination(ids_out_file_path='genbank/data/id_list_combined.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[===---------------------------------------------------------] 5.7%, 1851/32339\n",
-      " number of protein handles retrieved: 1851\n",
+      "[============================================================] 100.0%, 5220/5220\n",
+      " number of protein handles retrieved: 856\n",
       "----------\n",
-      "--- 1688 seconds ---\n"
+      "--- 4182 seconds ---\n"
      ]
     }
    ],
@@ -150,15 +149,15 @@
     "# Download the protein handles of all found ids\n",
     "start_time = time.time()\n",
     "\n",
-    "proteinretrival = ProteinRetrieval(ids_file_path='genbank/data/id_list2.json')\n",
-    "proteinretrival(out_file_path='genbank/data/protein_handles2.json')\n",
+    "proteinretrival = ProteinRetrieval(ids_file_path='genbank/data/protein_accessions_papers2.json')\n",
+    "proteinretrival(db='protein', out_file_path='genbank/data/protein_handles_accession_new_papers.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,27 +172,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of entires removed by antibody filter: 2130\n",
-      "Number of entires after antibody filter: 205\n",
+      "Number of entires removed by antibody filter: 4327\n",
+      "Number of entires after antibody filter: 385\n",
       "----------\n",
-      "Number of entries where antigen was determined: 178\n",
-      "Number of entries where antigen was not determined: 27\n",
+      "Number of entries where antigen was determined: 348\n",
+      "Number of entries where antigen was not determined: 37\n",
       "----------\n",
-      "Number of entries where fragement name was determined: 197\n",
-      "Number of entries where fragment name was not determined: 8\n",
+      "Number of entries where fragement name was determined: 373\n",
+      "Number of entries where fragment name was not determined: 12\n",
       "----------\n",
-      "Number of nanobodies: 3\n",
-      "Number of antibodies: 202\n",
+      "Number of nanobodies: 12\n",
+      "Number of antibodies: 373\n",
       "----------\n",
-      "Number of sequence pairs: 64\n",
-      "Number of sequences that could not be paired in attempt 1: 74\n",
+      "Number of sequence pairs: 119\n",
+      "Number of sequences that could not be paired in attempt 1: 135\n",
       "----------\n",
       "Number of entries attempted to pair with SAbDab: 0\n",
-      "Number of entries not pairable with SAbDab: 74\n",
+      "Number of entries not pairable with SAbDab: 135\n",
       "----------\n",
       "Number of pairs found with SAbDab: 0\n",
       "Number of sequences not paired but sequence from PDB added: 0\n",
-      "--- 52 seconds ---\n"
+      "--- 88 seconds ---\n"
      ]
     }
    ],
@@ -202,30 +201,71 @@
     "start_time = time.time()\n",
     "\n",
     "inforetreival = InfoRetrieval(proteins_file_path='genbank/data/nucleotide_handles_from_papers.json')\n",
-    "inforetreival(db='protein', classification_method='anarci', paired_out_file_path='genbank/data/AB_paired_nucelotides_from_papers.json',\n",
-    "                 unpaired_out_file_path='genbank/data/AB_unpaired_nucleotides_from_papers.json',\n",
-    "                 nanobod_out_file_path='genbank/data/nanobody_nucleotides_from_papers.json')\n",
+    "inforetreival(db='nucleotide', classification_method='anarci',\n",
+    "                paired_out_file_path='genbank/data/AB_paired_nucleotides_from_papers.json',\n",
+    "                unpaired_out_file_path='genbank/data/AB_unpaired_nucleotides_from_papers.json',\n",
+    "                nanobod_out_file_path='genbank/data/nanobody_nucleotides_from_papers.json')\n",
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of paired database entires: 1067\n",
+      "Elements in file 1: 848\n",
+      "Elements in file 2: 119\n",
       "----------\n",
-      "Number of paired database entires after duplicate removal: 485\n",
-      "Number of duplicates removed: 582\n",
+      "Number of unique elements in file 2 119\n",
+      "Total elements after comination: 967\n",
+      "Elements in file 1: 61\n",
+      "Elements in file 2: 47\n",
       "----------\n",
-      "Number of unpaired database entires: 4555\n",
+      "Number of unique elements in file 2 47\n",
+      "Total elements after comination: 108\n",
+      "Elements in file 1: 155\n",
+      "Elements in file 2: 12\n",
       "----------\n",
-      "--- 94 seconds ---\n"
+      "Number of unique elements in file 2 12\n",
+      "Total elements after comination: 167\n"
+     ]
+    }
+   ],
+   "source": [
+    "# combine information from nucleotide and protein ids\n",
+    "\n",
+    "combination = Combination('genbank/data/AB_paired_combined.json', 'genbank/data/AB_paired_nucleotides_from_papers.json')\n",
+    "combination('genbank/data/AB_paired_combined_papers_prot_nt.json')\n",
+    "\n",
+    "combination = Combination('genbank/data/AB_unpaired_combined.json', 'genbank/data/AB_unpaired_nucleotides_from_papers.json')\n",
+    "combination('genbank/data/AB_unpaired_combined_papers_prot_nt.json')\n",
+    "\n",
+    "combination = Combination('genbank/data/nanobody_combined.json', 'genbank/data/nanobody_nucleotides_from_papers.json')\n",
+    "combination('genbank/data/nanobody_combined_papers_prot_nt.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of paired database entires: 1134\n",
+      "----------\n",
+      "Number of paired database entires after duplicate removal: 549\n",
+      "Number of duplicates removed: 585\n",
+      "----------\n",
+      "Number of unpaired database entires: 4611\n",
+      "----------\n",
+      "--- 90 seconds ---\n"
      ]
     }
    ],
@@ -376,27 +416,6 @@
     "\n",
     "print(\"--- %s seconds ---\" % int((time.time() - start_time)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
