run_genbank_pipeline script added

--- a/run_genbank_pipeline.ipynb
+++ b/run_genbank_pipeline.ipynb
@@ -21,12 +21,12 @@
     "http.client.HTTPConnection._http_vsn = 10\n",
     "http.client.HTTPConnection._http_vsn_str = 'HTTP/1.0'\n",
     "\n",
-    "from genbank.keywords2ids import GenbankSearch\n",
-    "from genbank.json_combination import Combination\n",
-    "from genbank.ids2protein import ProteinRetrieval\n",
-    "from genbank.proteins2info import InfoRetrieval\n",
-    "from genbank.info2csv import PopulateDatabase\n",
-    "from genbank.evaluate_genbank_search import EvaluateGenbankSearch"
+    "from auto_db_pipeline.genbank.keywords2ids import GenbankSearch\n",
+    "from auto_db_pipeline.genbank.json_combination import Combination\n",
+    "from auto_db_pipeline.genbank.ids2protein import ProteinRetrieval\n",
+    "from auto_db_pipeline.genbank.proteins2info import InfoRetrieval\n",
+    "from auto_db_pipeline.genbank.info2csv import PopulateDatabase\n",
+    "from auto_db_pipeline.genbank.evaluate_genbank_search import EvaluateGenbankSearch"
    ]
   },
   {
