--- a/notebooks/compare_w_covabdab.ipynb
+++ b/notebooks/compare_w_covabdab.ipynb
@@ -1086,11 +1086,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c30f2af5f468e7f5b45bcc30fca5f4886c90d54777aed916ed5f6294dfb24bf2"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('base')",
+   "display_name": "Python 3.8.13 ('auto-db-pipeline')",
    "language": "python",
    "name": "python3"
   },
@@ -1104,9 +1101,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f5cb82b301b87eef88325f480de257324ba8b611cc1a51609875e0120daba8a9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
