--- a/notebooks/example_run.ipynb
+++ b/notebooks/example_run.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. create keywords"
+    "1. load keywords and known antigens from a text file"
    ]
   },
   {
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keywords = get_keywords()"
+    "keywords_disease = load_known_antigens('/src/covid_keywords.txt')\n",
+    "known_antigens = load_known_antigens('/src/covid_known_antigens.txt')"
    ]
   },
   {
@@ -81,13 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "known_antigens = {'COVID': ['coronavirus', 'sars-cov', 'sars'],\n",
-    "                'MERS': ['mers-cov', 'mers'],\n",
-    "                'SARS-COV-2': ['sars-cov-2', 'covid-19'],\n",
-    "                'SARS-COV-1': ['sars-cov-1'],\n",
-    "                'Spike protein': ['spike', 'spike protein'],\n",
-    "                'RBD': ['receptor binding domain', 'rbd']}\n",
-    "genbank_pipeline(keywords_disease, known_antigens, output_path)"
+    "genbank_pipeline(keywords_disease, known_antigens, output_path='data/genbank/')"
    ]
   },
   {
@@ -95,6 +90,15 @@
    "metadata": {},
    "source": [
     "5. Create database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collate_results(outfile_name='data/final_antibody_db.csv')"
    ]
   },
   {
