--- a/notebooks/example_run.ipynb
+++ b/notebooks/example_run.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. create keywords"
+    "1. load keywords and known antigens from test file"
    ]
   },
   {
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keywords = get_keywords()"
+    "keywords_disease = load_keywords('/src/covid_keywords.txt')\n",
+    "known_antigens = load_known_antigens('/src/covid_known_antigens.txt')"
    ]
   },
   {
@@ -47,14 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patents = get_seq()"
+    "get_seq_from_patents(keywords_disease)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. scrape papers"
+    "3. Search SI"
    ]
   },
   {
@@ -63,17 +64,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# find paper links\n",
     "papers = Papers(selected_date=\"2022_03_08\")\n",
-    "papers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "papers()\n",
     "paper_urls = get_dois()\n",
+    "\n",
+    "# scrape supplementary files\n",
     "supp_seqs = get_seqs_from_supp(paper_urls)"
    ]
   },
@@ -81,7 +77,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. search genbank"
+    "4. Search PDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. search genbank"
    ]
   },
   {
@@ -90,12 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "known_antigens = {'COVID': ['coronavirus', 'sars-cov', 'sars'],\n",
-    "                'MERS': ['mers-cov', 'mers'],\n",
-    "                'SARS-COV-2': ['sars-cov-2', 'covid-19'],\n",
-    "                'SARS-COV-1': ['sars-cov-1'],\n",
-    "                'Spike protein': ['spike', 'spike protein'],\n",
-    "                'RBD': ['receptor binding domain', 'rbd']}\n",
     "genbank_pipeline(keywords_disease, known_antigens, output_path)"
    ]
   },
@@ -103,13 +107,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Create database"
+    "6. Create database"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "collate_results(outfile_name='data/final_antibody_db.csv')"
+   ]
   }
  ],
  "metadata": {
