added keywords2papers code to pipeline

--- a/notebooks/example_run.ipynb
+++ b/notebooks/example_run.ipynb
@@ -65,9 +65,10 @@
    "outputs": [],
    "source": [
     "# find paper links\n",
-    "papers = Papers(selected_date=\"2022_03_08\")\n",
-    "papers()\n",
-    "paper_urls = get_dois()\n",
+    "k2p = Keywords2Papers(keywords_disease)\n",
+    "pubmed_results = k2p.get_pubmed()\n",
+    "biorxiv_results = k2p.get_biorxiv()\n",
+    "\n",
     "\n",
     "# scrape supplementary files\n",
     "supp_seqs = get_seqs_from_supp(paper_urls)"
