code added to get list of paper urls from paper info

--- a/notebooks/example_run.ipynb
+++ b/notebooks/example_run.ipynb
@@ -68,10 +68,10 @@
     "k2p = Keywords2Papers(keywords_disease)\n",
     "pubmed_results = k2p.get_pubmed()\n",
     "biorxiv_results = k2p.get_biorxiv()\n",
+    "paper_urls = papers2urls(pubmed_results, biorxiv_results)\n",
     "\n",
-    "\n",
-    "# scrape supplementary files\n",
-    "supp_seqs = get_seqs_from_supp(paper_urls)"
+    "# get sequences from supplementary material\n",
+    "get_seqs_from_supp(paper_urls)"
    ]
   },
   {
